<resources>
    <string name="app_name">MCQ Application</string>
    <string name="MoveTextGuestSide">Many more things are coming daily stay turn on. </string>
    <string name="copy_right" translatable="false">Copyrights © 2018</string>
    <string name="forgot_password_text">Please enter your mobile number to search for your account</string>
    <string name="forgot_password_error_text">Your search did not return any results. Please try again with other information</string>
    <string name="forgot_change_password">A strong password is a combination of letters and punctuation marks. It must be at least 6 characters long.</string>
    <string name="Error_Msg">Warning</string>
    <string name="Exception_Msg">Exception</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="banner_main">ca-app-pub-3940256099942544/630097811</string>
    <string name="banner_main_new">ca-app-pub-5656618333093481/5047456248</string>
    <string name="Interstitial_main_new">ca-app-pub-5656618333093481/7589859104</string>
    <string name="fa_icon_refresh">&#xf021;</string>
    <string name="fa_timer">&#xf017;</string>
    <string name="fa_previous">&#xf100;</string>
    <string name="fa_next">&#xf101;</string>
    <string name="fa_close">&#xf05c;</string>
    <string name="fa_refresh">&#xf021;</string>
    <string name="fa_pdf">&#xf1c1;</string>
    <string name="fa_text">&#xf1c3;</string>
    <string name="fa_image">&#xf1c5;</string>
    <string name="fa_video">&#xf1c8;</string>
    <string name="title_activity_attendance">AttendanceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fa_plus">&#xf067;</string>
    <string name="fa_minus">&#xf068;</string>
    <string name="comment">&#xf27a;</string>
    <string name="fa_home">&#xf015;</string>
    <string name="fa_exam">&#xf1ea;</string>
    <string name="fa_data">&#xf15b;</string>
    <string name="fa_ActiveDeative">&#xf205;</string>
    <string name="fa_notification">&#xf0f3;</string>
    <string name="fa_changepassword">&#xf040;</string>
    <string name="fa_setting">&#xf013;</string>
    <string name="fa_tutorial">&#xf008;</string>
    <string name="fa_videoManual">&#xf1c8;</string>
    <string name="fa_userMannual">&#xf1c1;</string>
    <string name="fa_aboutUs">&#xf0c0;</string>
    <string name="fa_developBy">&#xf20e;</string>
    <string name="fa_other">&#xf2cb;</string>
    <string name="fa_utility">&#xf085;</string>
    <string name="fa_logout">&#xf011;</string>
    <string name="fa_profile">&#xf007;</string>
    <string name="fa_testlist">&#xf03a;</string>
    <string name="fa_giventestlist">&#xf0c9;</string>
    <string name="fa_attendance">&#xf00c;</string>
    <string name="fa_suggestions">&#xf27b;</string>
    <string name="fa_ratethisapp">&#xf164;</string>
    <string name="fa_share">&#xf1e0;</string>
    <string name="fa_fees">&#xf156;</string>
    <string name="fa_User">&#xf007;</string>
    <string name="fa_password">&#xf084;</string>
    <string name="fa_email">&#xf0e0;</string>
    <string name="fa_music">&#xf001;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_dialog_title">Please Select</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>
    <string name="title_activity_aaaaa">aaaaa</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="About_MKS">Master Key Solutions is a global leader in technology services and consulting. We enable clients to create and execute strategies for their digital transformation. From engineering to application development, knowledge management and business process management, we help our clients find the right problems to solve, and to solve these effectively. Our team of innovators, is differentiated by the imagination, knowledge and experience, across industries and technologies, that we bring to every project we undertake.</string>
    <string name="fa_stop_watch">&#xf017;</string>
    <string name="fa_calender">&#xf073;</string>
    <string name="fa_lock">&#xf023;</string>
    <string name="fa_unlock_item_c">&#xf09c;</string>
    <string name="fa_unlock_item">&#xf3c1;</string>
    <string name="fa_download">&#xf019;</string>
    <string name="fa_download_complete">&#xf058;</string>
    <string name="user_register_icon">User Register Icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="applicationlogo">Application Logo</string>
    <string name="mobile_number_hint">  Mobile Number</string>
    <string name="password_hint">  Password</string>
    <string name="signin_button_text">Login to my account ></string>
    <string name="clear_button_text">Clear</string>
    <string name="welcome_textview_text">Welcome to</string>
    <string name="forgotpassword_textview_text">Forgot Password ?</string>
    <string name="signup_textview_text">New here? Create an account</string>
    <string name="titletext_exit">Exit!!</string>
    <string name="messagetext_exit">Are you sure? You want to exit?</string>
    <string name="okbtntext_yes">Yes</string>
    <string name="canclebtntext_no">No</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="home_title">Home</string>
    <string name="mcq_exam_fragment_title">MCQ Exam</string>
    <string name="given_mcq_exam_fragment_title">Given MCQ Exam</string>
    <string name="student_given_mcq_exam_fragment_title">Student Given MCQ Exam</string>
    <string name="theory_test_fragment_title">Theory Test</string>
    <string name="extra_theory_test_fragment_title">Extra Theory Test</string>
    <string name="send_marks_fragment_title">Send Marks</string>
    <string name="mark_attendance_fragment_title">Mark Attendance</string>
    <string name="show_attendance_fragment_title">Show Attendance</string>
    <string name="day_wise_report_fragment_title">Day Wise Report</string>
    <string name="add_fees_fragment_title">Add Fees</string>
    <string name="show_fees_fragment_title">Show Fees</string>
    <string name="profile_title">Profile</string>
    <string name="Develop_by_title">Develop By</string>
    <string name="About_us_title">About Us</string>
    <string name="login_background_image_desc">Login Background Image</string>
    <string name="logo_image_desc">logo Image</string>
    <string name="mobile_image_desc">Mobile Icon</string>
    <string name="password_image_desc">Password Icon</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="add_btn">Add</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="gender">Gender*</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="address">Address</string>
    <string name="FirstName_hint">First Name*</string>
    <string name="MiddleName_hint">Middle Name*</string>
    <string name="LastName_hint">Last Name*</string>
    <string name="EmailAddress_hint">Email Address*</string>
    <string name="emailAddress_hint">Email Address</string>
    <string name="FullName_hint">User Name</string>
    <string name="MobileNumber_hint">Mobile Number*</string>
    <string name="Queries_hint">Queries</string>
    <string name="Contact">Contact: (0241) 2347251</string>
    <string name="Contact_Us">Drop mail at</string>
    <string name="Visit_web_site">Visit our website</string>
    <string name="Privacy_policy">Privacy Policy</string>
    <string name="Version">Version</string>
    <string name="rate_us">Rate Us On Play Store</string>
    <string name="Copyright">Copyrights 2018</string>
    <string name="Password_hint">Password*</string>
    <string name="current_password_hint">Current Password*</string>
    <string name="ConfirmPassword_hint">Confirm Password*</string>
    <string name="SelectClass_hint">Select Class</string>
    <string name="SignUpButtonText">Sign Up</string>
    <string name="didn_t_recieve_otp_yet">Didn\'t recieve OTP yet?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verification">Verification</string>
    <string name="verification_code_will_be_sent_to">Verification code will be sent to</string>
    <string name="verify">Verify</string>
    <string name="Search">Search</string>
    <string name="Choose_a_new_password">Choose a new password</string>
    <string name="changepassword_btn_text">Change Password</string>
    <string name="changepassword_hint">Change Password</string>
    <string name="changepassword_for_all_hint">Change Password For All</string>
    <string name="attendance_text_view">Attendance</string>
    <string name="exam_text_view">Exam</string>
    <string name="more_option_text_view">More Option</string>
    <string name="Camera_icon">Camera Icon</string>
    <string name="About_Us_hint">About Us</string>
    <string name="Develop_By_hint">Develop By</string>
    <string name="User_Manual_hint">User Manual</string>
    <string name="Video_Manual_hint">Video Manual</string>
    <string name="Logout_hint">Logout</string>
    <string name="bottomNavigation_Home">Home</string>
    <string name="bottomNavigation_SpokenEnglish">Spoken English</string>
    <string name="bottomNavigation_Profile">Profile</string>
    <string name="actionbar_addbutton">Action Bar Add Button</string>
    <string name="actionbar_Logout">Action Bar Logout</string>
    <string name="Cardview_row_Attempt_hint">Attempt</string>
    <string name="Cardview_row_Test_Time_hint">Test Time</string>
    <string name="Cardview_row_Score_hint">Score</string>
    <string name="Cardview_row_Negative_Marks_hint">Negative Marks</string>
    <string name="Cardview_row_Test_Total_Marks_hint">Test Total Marks</string>
    <string name="Cardview_row_university_name_hint">University Name</string>
    <string name="Cardview_row_Date_hint">Date</string>
    <string name="Cardview_row_Exam_Title_hint">Name/Title</string>
    <string name="Cardview_row_Enter_Mark_hint">Enter Mark</string>
    <string name="Time_hint">Time</string>
    <string name="Question_Size_hint">Question</string>
    <string name="Question_Mark_hint">Marks</string>
    <string name="Question_hint">Question Text</string>
    <string name="Image_Before_Question">Image Before Question</string>
    <string name="Image_After_Question">Image After Question</string>
    <string name="Option_Image">Option Image</string>
    <string name="hint">Question Hint</string>
    <string name="MCQ_Exam">MCQ Exam</string>
    <string name="Given_MCQ_Exam">Given MCQ Exam</string>
    <string name="Student_Given_MCQ_Exam">Student Given MCQ Exam</string>
    <string name="Theory_Data_Exam">Theory/Data Exam</string>
    <string name="Extra_Theory_Data_Exam">Extra Theory/Data Exam</string>
    <string name="Send_Marks">Send Marks</string>
    <string name="Show_Marks">Show Marks</string>
    <string name="Student">Student</string>
    <string name="Move_Theory_Test">Move Theory Test</string>
    <string name="Move_Student">Move Student</string>
    <string name="Move_Guest">Move Guest</string>
    <string name="Add_Test">Add Test</string>
    <string name="Add_Question">Add Question</string>
    <string name="Theory_Test_For_Guest">Theory Test</string>
    <string name="Extra_Theory_Test_For_Guest">Extra Theory Testt</string>
    <string name="Guest_Profile">Profile</string>
    <string name="Show_Attendance">Show Attendance</string>
    <string name="Mark_Attendance">Mark Attendance</string>
    <string name="Day_Wise_Report">Day Wise Report</string>
</resources>