<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/Text_view_size"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/applicationlogo"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewLogo"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="@dimen/about_text_padding"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/Text_view_size"
        android:textColor="@color/black"
        android:textStyle="bold" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAppName"
        android:layout_marginTop="@dimen/Home_Margin">

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user"
            android:hint="@string/mobile_number_hint"
            android:inputType="number"
            android:maxLength="10"
            android:textSize="@dimen/Text_view_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textinputMobile">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password_key"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/Text_view_size" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textinputPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/textview_background_for_login"
        android:text="@string/signin_button_text"
        android:textAllCaps="false"
        android:textSize="@dimen/Button_txt_size" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="@dimen/Text_View_Margin"
        android:text="@string/forgotpassword_textview_text"
        android:textAlignment="center"
        android:textSize="@dimen/Text_view_hint_size" />

    <TextView
        android:id="@+id/txtsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/signup_textview_text"
        android:textAlignment="center"
        android:textSize="@dimen/Text_view_hint_size" />
</RelativeLayout>
