<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImageProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:elevation="10dp"
        android:src="@drawable/ic_launcher_logo_c" />

    <android.support.v7.widget.CardView
        android:id="@+id/profileCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="-40dp"
        android:layout_marginRight="@dimen/text_view_top_margin_5"
        android:layout_marginTop="1dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_weight="0.8"
                android:orientation="vertical"
                android:padding="2dp">


                <TextView
                    android:id="@+id/txtExamTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/Cardview_row_Exam_Title_hint"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cardview_row_Date_hint"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtTestTotalMarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cardview_row_Test_Total_Marks_hint"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtTestNegativeMark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cardview_row_Negative_Marks_hint"
                    android:textColor="@color/red"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cardview_row_Score_hint"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtTestTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cardview_row_Test_Time_hint"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtAttempt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cardview_row_Attempt_hint"
                    android:textSize="12sp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <com.mksmcqapplicationtest.View.CustomEditText
                    android:id="@+id/etdEnterMarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Cardview_row_Enter_Mark_hint"
                    android:maxLength="7"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:visibility="gone" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/txtTextData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/fa_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtImageData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/fa_image"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtVideoData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/fa_video"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtPDFData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:text="@string/fa_pdf"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>